Reverting README.md back to 17d1d4d7d2e302c5dc4b9ba8e09e24fb9b8a48fb.